src/App.css
@font-face {
  font-family: "Tanker";
  src: url("/fonts/Tanker-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Impact";
  src: url("/fonts/impact.ttf") format("truetype");
}


*{
  margin:0 ;
  padding:0 ;
}

.mainContainer {
  width: 100%;
  height: 100vh;
  display: flex;
  background-color: #b4b4b4;
}

.mainTitle {
  display: flex;
  z-index: 20;
  flex-direction: column;
  /* gap: 1rem; */
  margin-top: 9rem;
  transform: translateX(-100%);
  color: white;
  font-family: "Tanker";
  animation: appearFromLeft 1.25s ease-out forwards;
}

@media (max-width: 1034px) {
  .mainTitle {
    margin-top: 4rem;
  }
}

@media (max-width: 744px) {
  .mainTitle {
    margin-top: 0rem;
  }
}

@keyframes appearFromLeft {
  100% {
    margin-left: 5%;
    transform: translateX(0%);
  }
}

.imEdoRusso {
  font-size: 6rem;
  font-family: Impact;
}

@media (max-width: 744px) {
  .imEdoRusso {
    font-size: 4.5rem;
  }
}

.scrollToSeeMyProjects {
  position: absolute;
  right: 0;
  bottom: 20rem;
  white-space: nowrap;
  color: white;
  font-size: 1.5rem;
  writing-mode: vertical-rl;
  z-index: 20;
}

.scrollToSeeMyProjectsSmoke {
  position: absolute;
  right: 0;
  bottom: 20rem;
  white-space: nowrap;
  color: white;
  font-size: 1.5rem;
  writing-mode: vertical-rl;
  z-index: 20;
  animation: smoke 2s linear forwards;
}

@keyframes smoke {
  100% {
    opacity: 0;
    filter: blur(2rem);
    transform: translateY(-400px);
    display: none;
  }
}

.yellowHorizontalRectangle {
  position: absolute;
  height: 33%;
  width: 0;
  right: 0;
  bottom: 4rem;
  opacity: 0.75;
  background-color: #d8db3a;
  z-index: 20;
  animation: appearFromRight 1s ease-out forwards;
  animation-delay: 0.5s;
}

@keyframes appearFromRight {
  100% {
    /* transform: translateX(0); */
    width: 30rem;
  }
}

.scrollIcon {
  position: fixed;
  width: 3rem;
  right: 2.5rem;
  bottom: 1.5rem;
  z-index: 40;
}

.scrollIconJumping {
  position: fixed;
  width: 3rem;
  right: 2.5rem;
  bottom: 1.5rem;
  z-index: 40;
  animation: jumping 0.9s infinite;
}

@keyframes jumping {
  0% {
    transform: translateY(0);
  } /* Initial position */
  50% {
    transform: translateY(-0.7rem);
  } /* Jump up */
  100% {
    transform: translateY(0);
  }
}

